inserir pt-br e dar pontos de referencia no ballons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
@@ -29,10 +29,10 @@
   
   <div class="cont">
       <div class="ballon">
-        <img src="images/bg-pattern-top.svg" alt="ballons-background-top">
+        <img class="image" src="images/bg-pattern-top.svg" alt="ballons-background-top">
       </div>
       <div class="ballon2">
-        <img src="images/bg-pattern-bottom.svg" alt="ballons-background-bottom">
+        <img class="image" src="images/bg-pattern-bottom.svg" alt="ballons-background-bottom">
       </div>
 
     <div class="container">
